--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,9 +2,17 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/viveroFragment">
+    app:startDestination="@id/listaPlantasFragment">
 
-    <!-- 🌱 MENÚ PRINCIPAL -->
+
+    <fragment
+        android:id="@+id/identificarFragment"
+        android:name="com.emanuel.mivivero.ui.identificar.IdentificarFragment"
+        android:label="Identificar" />
+
+
+
+    <!-- 🌱 MENÚ PRINCIPAL
     <fragment
         android:id="@+id/viveroFragment"
         android:name="com.emanuel.mivivero.ui.vivero.ViveroFragment"
@@ -22,6 +30,8 @@
             android:id="@+id/action_viveroFragment_to_albumesFragment"
             app:destination="@id/albumesFragment" />
     </fragment>
+
+    -->
 
     <!-- 🌿 PLANTAS -->
     <fragment
