--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,6 @@
     <color name="purple_500">#6200EE</color>
     <color name="purple_700">#3700B3</color>
     <color name="purple_200">#BB86FC</color>
-    <color name="teal_200">#03DAC5</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="btn_disabled">#BDBDBD</color> <!-- gris -->
@@ -17,6 +16,11 @@
     <color name="background_soft">#F4FBFA</color>
     <color name="text_primary">#222222</color>
     <color name="text_secondary">#666666</color>
+
+
+    <color name="teal_200">#03DAC5</color>
+    <color name="teal_500">#009688</color>
+    <color name="teal_700">#00796B</color>
 
 
 
