--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="background_soft">#F4FBFA</color>
     <color name="text_primary">#222222</color>
     <color name="text_secondary">#666666</color>
+    <color name="card_backgraund">#CDE0C2</color>
 
 
 
