Manejo de campos a rellenar

--- a/app/src/main/res/layout/fragment_registro_usuario.xml
+++ b/app/src/main/res/layout/fragment_registro_usuario.xml
@@ -25,10 +25,20 @@
 
         <!-- CAMPOS -->
 
-        <EditText
-            android:id="@+id/etNombreReal"
-            style="@style/FormInput"
-            android:hint="Nombre real" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:hint="Nombre real"
+            app:boxBackgroundMode="outline">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etNombreReal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textCapWords"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <EditText
             android:id="@+id/etNick"
